Fixed issue with projects not showing up in responsive design

--- a/docs/style.css
+++ b/docs/style.css
@@ -425,7 +425,7 @@ html {
   bottom: 0px;
   line-height: 1;
   display: inline-block;
-  opacity: 0;
+  
 }
 
 @media (min-width: 480px) {
@@ -558,21 +558,30 @@ html {
 
 @keyframes fade-in-menu { 
     0% {
-    opacity: 0
+    opacity: 0;
     transform: translateX(-3rem) rotate(5deg);
     -webkit-transform: translateX(-3rem) rotate(5deg);
     -moz-transform: translateX(-3rem) rotate(5deg);
     -ms-transform: translateX(-3rem) rotate(5deg);
     -o-transform: translateX(-3rem) rotate(5deg);
     }
-	100% {opacity: 1;}
+	100% {
+	opacity: 1;
+	}
+}
+
+@media (min-width:480px) {
+    .pcontain a {
+        opacity: 0;
+    }
 }
 
 @media (min-width:480px) {
     .pcontain.show a{
-        -webkit-animation: fade-in-menu 1000ms ease-out;
-        -moz-animation: fade-in-menu 1000ms ease-out;
-        animation: fade-in-menu 1000ms ease-out;
+        
+        -webkit-animation: fade-in-menu 1000ms ease-out forwards;
+        -moz-animation: fade-in-menu 1000ms ease-out forwards;
+        animation: fade-in-menu 1000ms ease-out forwards;
         animation-fill-mode: forwards;
     }
 }
